Fix overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,7 @@
 * {
   box-sizing: border-box;
   font-family: 'Suez One', serif;
+  overflow: hidden;
   body {    
     min-width: 100vw;
     min-height: 100vh;
